# cal-hub

./: .env.example  .gitignore  README.md
.github/workflows/: ci.yml  deploy-cloudflare.yml  deploy.yml
agents/macos/: README.md  TROUBLESHOOTING.md  com.availcal.export.plist  export_calendar.py  install.sh
agents/macos/app/: Info.plist  launcher.c
agents/windows/: Export-Calendar.ps1
docs/: ARCHITECTURE.md  GET-ICS-URLS.md  RUNBOOK.md  SUBSCRIBE.md
infra/: main.bicep
infra/cloudflare/: ACCESS.md  README.md
merge/: .dockerignore  Dockerfile  pyproject.toml  sources.default.toml
merge/src/availcal/: main.py  merge.py  pull.py  server.py  sources.py  storage.py
merge/tests/: test_main.py  test_merge.py  test_pull.py  test_server.py  test_storage.py
merge/vdirsyncer/: config.example
worker/: .dev.vars.example  README.md  package-lock.json  package.json  wrangler.jsonc
worker/src/: access.ts  availability-page.ts  booking.ts  calendar-links.ts  calendar-view.ts  chat-page.ts  chat.ts  contact.ts  email-links.ts  embed.ts  github.ts  index.ts  owner-bio.ts  scheduling.ts
worker/test/: access.test.ts  availability-page.test.ts  booking.bundled.dom.test.ts  booking.dom.test.ts  booking.test.ts  calendar-links.test.ts  calendar-view.test.ts  chat.test.ts  contact.test.ts  email-links.test.ts  github.test.ts  scheduling.test.ts
